--- a/app/src/main/res/layout/dialog_edit_author_content.xml
+++ b/app/src/main/res/layout/dialog_edit_author_content.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -127,6 +127,7 @@
         style="@style/Text.Body"
         android:layout_marginTop="@dimen/section_margin_top"
         android:text="@string/warning_immediate_global_changes"
+        android:maxLines="2"
         android:textAppearance="?attr/textAppearanceBodySmall"
         app:layout_constraintStart_toStartOf="@id/lbl_family_name"
         app:layout_constraintTop_toBottomOf="@id/lbl_real_author"
