--- a/app/src/main/res/layout-land/fragment_book_details.xml
+++ b/app/src/main/res/layout-land/fragment_book_details.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -114,20 +114,32 @@
             tools:text="@sample/data.json/book/title"
             />
 
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier_rating_toc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="start"
+            app:constraint_referenced_ids="rating,btn_show_toc"
+            />
+
         <RatingBar
             android:id="@+id/rating"
             style="@style/Field.RatingBar.Indicator"
             android:layout_marginStart="@dimen/field_margin_inline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/original_title"
+            app:layout_constraintBottom_toTopOf="@id/author"
             />
 
-        <CheckBox
-            android:id="@+id/read"
-            style="@style/Field.Checkable"
-            android:text="@string/lbl_read"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_read"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintEnd_toStartOf="@+id/barrier_rating_toc"
             app:layout_constraintStart_toEndOf="@id/barrier_covers_end"
             app:layout_constraintTop_toBottomOf="@id/original_title"
+            tools:layout="@layout/fragment_read_progress"
             />
 
         <TextView
@@ -135,7 +147,7 @@
             style="@style/Field.Generic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/barrier_covers_end"
-            app:layout_constraintTop_toBottomOf="@id/read"
+            app:layout_constraintTop_toBottomOf="@id/fragment_read"
             tools:ignore="SelectableText"
             tools:text="@sample/data.json/author/full_name"
             />
