--- a/app/src/main/res/xml/preferences_style.xml
+++ b/app/src/main/res/xml/preferences_style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -317,4 +317,16 @@
 
     <!--    </PreferenceCategory>-->
 
+    <PreferenceCategory
+        android:title="@string/lbl_reading">
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_baseline_menu_book_24"
+            android:key="style.read.status.extended"
+            android:summaryOff="@string/ps_use_read_progress_off"
+            android:summaryOn="@string/ps_use_read_progress_on"
+            android:title="@string/lbl_reading_progress" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
