--- a/app/src/main/res/layout/fragment_edit_book_notes.xml
+++ b/app/src/main/res/layout/fragment_edit_book_notes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -34,33 +34,24 @@
         android:layout_margin="@dimen/container_margin"
         >
 
-        <CheckBox
-            android:id="@+id/cbx_read"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/field_margin_start"
-            android:layout_marginTop="@dimen/field_margin_top"
-            android:text="@string/lbl_read"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:checked="true"
-            />
-
         <RatingBar
             android:id="@+id/rating"
             style="@style/Field.RatingBar.Editable"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="SpeakableTextPresentCheck"
             tools:rating="2.5"
             />
 
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier_read_rating_bottom"
-            android:layout_width="wrap_content"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_read"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="cbx_read,rating"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rating"
+            tools:layout="@layout/fragment_read_progress"
             />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -69,7 +60,7 @@
             android:hint="@string/lbl_read_start"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier_read_rating_bottom"
+            app:layout_constraintTop_toBottomOf="@id/fragment_read"
             >
 
             <com.google.android.material.textfield.TextInputEditText
