--- a/app/src/main/res/layout/fragment_read_checkbox.xml
+++ b/app/src/main/res/layout/fragment_read_checkbox.xml
@@ -19,11 +19,20 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<CheckBox
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/read"
-    style="@style/Field.Checkable"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/lbl_read"
-    />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <CheckBox
+        android:id="@+id/read"
+        style="@style/Field.Checkable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbl_read"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
