--- a/app/src/main/res/layout/booksonbookshelf_row_book.xml
+++ b/app/src/main/res/layout/booksonbookshelf_row_book.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -138,9 +138,24 @@
                 android:id="@+id/rating"
                 style="@style/BoB.Group.Book.RatingBar"
                 android:layout_width="0dp"
+                android:layout_marginTop="@dimen/section_margin_top"
                 android:visibility="gone"
                 app:layout_constraintStart_toEndOf="@id/col1"
                 app:layout_constraintTop_toBottomOf="@id/series_title"
+                tools:visibility="visible"
+                />
+
+            <!-- layout_goneMarginTop for when 'rating' is GONE. -->
+            <TextView
+                android:id="@+id/read_progress"
+                style="@style/BoB.Group.Book.Text"
+                android:visibility="gone"
+                app:layout_goneMarginTop="@dimen/section_margin_top"
+                app:layout_constraintEnd_toStartOf="@id/icon_sidebar"
+                app:layout_constraintStart_toEndOf="@id/col1"
+                app:layout_constraintTop_toBottomOf="@id/rating"
+                tools:ignore="SelectableText"
+                tools:text="@sample/data.json/reading_progress/name"
                 tools:visibility="visible"
                 />
 
@@ -148,9 +163,10 @@
                 android:id="@+id/author"
                 style="@style/BoB.Group.Book.Text"
                 android:visibility="gone"
+                android:layout_marginTop="@dimen/section_margin_top"
                 app:layout_constraintEnd_toStartOf="@id/icon_sidebar"
                 app:layout_constraintStart_toEndOf="@id/col1"
-                app:layout_constraintTop_toBottomOf="@id/rating"
+                app:layout_constraintTop_toBottomOf="@id/read_progress"
                 tools:ignore="SelectableText"
                 tools:text="@sample/data.json/author/full_name"
                 tools:visibility="visible"
