--- a/app/src/main/res/xml/preferences_style.xml
+++ b/app/src/main/res/xml/preferences_style.xml
@@ -318,7 +318,7 @@
     <!--    </PreferenceCategory>-->
 
     <PreferenceCategory
-        android:title="@string/lbl_reading">
+        android:title="@string/pc_reading">
 
         <SwitchPreference
             android:defaultValue="false"
