--- a/app/src/main/res/values/styles-bob.xml
+++ b/app/src/main/res/values/styles-bob.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -128,5 +128,13 @@
     <style name="BoB.Group.Book.RatingBar" parent="Field.RatingBar.Indicator.Small">
         <item name="android:layout_marginTop">0dp</item>
         <item name="android:layout_marginStart">0dp</item>
+    </style>
+
+    <!-- keep the icon in sync with style "Field.ReadingProgress" -->
+    <style name="BoB.Group.Book.ReadingProgress"
+           parent="Base.BoB.Group.Book">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:drawableStart">@drawable/ic_baseline_menu_book_24_small</item>
+        <item name="android:drawablePadding">4dp</item>
     </style>
 </resources>
