--- a/app/src/main/res/layout/popup_menu.xml
+++ b/app/src/main/res/layout/popup_menu.xml
@@ -25,7 +25,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/container_margin"
+    android:padding="@dimen/context_menu_padding"
     >
 
     <TextView
