--- a/app/src/main/res/layout/fragment_sync_export.xml
+++ b/app/src/main/res/layout/fragment_sync_export.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -34,7 +34,7 @@
         >
 
         <com.hardbacknutter.nevertoomanybooks.core.widgets.ConstraintRadioGroup
-            android:id="@+id/rb_books_group"
+            android:id="@+id/rbg_books"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:constraint_referenced_ids="rb_export_all,rb_export_new_and_updated"
