CSV imports: added support for decoding typical Goodreads columns in their CSV export files

--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -110,6 +110,9 @@
     <string name="option_bol_ellipsis"
             translatable="false">BOL…</string>
 
+    <!-- The project which inspired us. -->
+    <string name="lbl_book_catalogue"
+            translatable="false">Book Catalogue</string>
     <string name="brackets"
             translatable="false">(%1$s)</string>
 
