--- a/app/src/main/res/layout/dialog_styles_menu_content.xml
+++ b/app/src/main/res/layout/dialog_styles_menu_content.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -35,6 +35,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/toolbar_select_style_floating_dialog"
         app:title="@string/lbl_style"
+        app:subtitle="@string/info_builtin_style_asterix"
+        app:subtitleTextAppearance="?attr/textAppearanceTitleSmall"
         />
 
     <androidx.recyclerview.widget.RecyclerView
